# nikka-db

./: Cargo.toml  LICENSE  README.md  example.config.nikka
.github/workflows/: workflow.yml
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: database_bench.rs
crates/e2e-tests/: Cargo.toml
crates/e2e-tests/src/: lib.rs
crates/e2e-tests/tests/: e2e_tests.rs
crates/nikkadb-client/: Cargo.toml
crates/nikkadb-client/src/: client.rs  lib.rs
crates/nikkadb-server/: Cargo.toml
crates/nikkadb-server/src/: database.rs  lib.rs  main.rs  server.rs
crates/nikkadb-server/src/utils/: builder.rs  mod.rs  parser.rs  trie.rs
crates/nikkadb-server/tests/: trie_test.rs
crates/samples/: Cargo.toml
crates/samples/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: errors.rs  lib.rs  protocol.rs
crates/shared/tests/: tests.rs
scala/: build.sbt
scala/modules/client/src/main/scala/nikkadb/client/: NikkaClient.scala
scala/modules/e2e-tests/src/test/scala/nikkadb/tests/: E2ETests.scala
scala/modules/samples/src/main/scala/nikkadb/samples/: Main.scala
scala/modules/server/src/main/scala/nikkadb/server/: Client.scala  NikkaDb.scala  NikkaServer.scala
scala/modules/server/src/main/scala/nikkadb/server/utils/: TrieNode.scala
scala/modules/server/src/test/scala/nikkadb/server/: TrieTests.scala
scala/modules/shared/src/main/scala/nikkadb/shared/: Protocol.scala  Types.scala
