[workspace]
members = [
    "crates/nikkadb-client",
    "crates/nikkadb-server",
    "crates/shared",
    "crates/e2e-tests",
    "crates/samples"
]
resolver = "2"

[workspace.lints.clippy]
pedantic = "deny"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/hashtagcryingemoji/nikka-db"