[package]
name = "nikkadb-server"
version = "1.0.0"
edition = "2021"

[dependencies]
shared = { path = "../shared"}

[lints]
workspace = true

[lib]
name = "nikkadb_server"
path = "src/lib.rs"

[features]
utils_for_test = []

[[test]]
name = "trie_test"
path = "tests/trie_test.rs"
required-features = ["utils_for_test"]