[package]
name = "nikkadb-server"
version.workspace = true
edition.workspace = true

[dependencies]
mio = { version = "1.2.1", features = ["net", "os-poll"] }
shared = { path = "../shared"}

[lints]
workspace = true

[features]
utils_for_test = []

[[test]]
name = "trie_test"
path = "tests/trie_test.rs"
required-features = ["utils_for_test"]